# ftxthing

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CmakePresets.json  Doxyfile  README.md  TODO.md  build_clang.sh  build_emscripten.ps1  build_emscripten.sh  clangd_setup.txt  make_docs.sh
src/: CMakeLists.txt  ftxthing.cpp
src/animation/: CMakeLists.txt  animation.cpp  animation.hpp  animation_types.hpp  animator.cpp  animator.hpp
src/app/: CMakeLists.txt  account.cpp  account.hpp  app_config.hpp  app_context.hpp  grand_central.cpp  grand_central.hpp  immovable.hpp  move_only.hpp  my_ftx_app.cpp  my_ftx_app.hpp  registry_facade.hpp  ui_fsm.hpp
src/content/: CMakeLists.txt
src/entities/: CMakeLists.txt  component_builder.hpp  encounter.cpp  encounter.hpp  entities.cpp  entities.hpp  entity_builder.hpp  entity_types.hpp  party.cpp  party.hpp
src/fairlanes/: CMakeLists.txt  unique_tag.hpp
src/fairlanes/combat/: combat_buses.hpp  combat_events.hpp  damage.hpp
src/fairlanes/concepts/: damage.hpp  encounter.cpp  encounter.hpp  encounter_builder.cpp  encounter_builder.hpp  team.hpp
src/fairlanes/context/: account_ctx.hpp  app_ctx.hpp  attack_ctx.hpp  encounter_ctx.hpp  entity_ctx.hpp  party_ctx.hpp
src/fairlanes/ecs/: fwd.hpp
src/fairlanes/ecs/components/: encounter.cpp  encounter.hpp  is_account.cpp  is_account.hpp  is_encounter.hpp  is_party.cpp  is_party.hpp  participants.hpp  party_business.cpp  party_business.hpp  party_member.cpp  party_member.hpp  selected_account.cpp  selected_account.hpp  selected_character.cpp  selected_character.hpp  selected_party.cpp  selected_party.hpp  skills.hpp  stats.cpp  stats.hpp  tags.hpp  track_xp.cpp  track_xp.hpp  turn_timer.hpp
src/fairlanes/ecs/systems/: tick.hpp
src/fairlanes/fsm/: combatant_fsm.hpp  party_loop.cpp  party_loop.hpp  party_loop_ctx.hpp  timed_combat.hpp
src/fairlanes/monsters/: field_mouse.cpp  field_mouse.hpp  monster_kind.hpp  monster_registry.hpp  register_monsters.cpp  register_monsters.hpp
src/fairlanes/skills/: learnable_skill.hpp  skills.hpp  thump.cpp  thump.hpp
src/fairlanes/systems/: grant_xp_to_party.cpp  grant_xp_to_party.hpp  replenish_party.cpp  replenish_party.hpp  take_damage.cpp  take_damage.hpp  tick_party_fsms.cpp  tick_party_fsms.hpp
src/fairlanes/widgets/: account_battle_view.cpp  account_battle_view.hpp  body_component.cpp  body_component.hpp  combatant.cpp  combatant.hpp  console_overlay.cpp  console_overlay.hpp  fancy_log.cpp  fancy_log.hpp  footer_component.cpp  footer_component.hpp  root_component.cpp  root_component.hpp  widget_types.hpp
src/include/fairlanes/ecs/: query.hpp
src/include/fairlanes/ecs/components/: account.hpp  is_account.hpp  is_party.hpp  party.hpp  party_business.hpp  party_fsm.hpp  party_member.hpp
src/include/fairlanes/fsm/: party_loop.hpp  party_loop_ctx.hpp
src/screens/: CMakeLists.txt  battle_screen.cpp  battle_screen.hpp  screen_types.hpp
src/systems/: CMakeLists.txt  console_commands.hpp  console_overlay.hpp  expr_engine.cpp  expr_engine.hpp  log.cpp  log.hpp  random_hub.hpp  rng_streams.hpp  serialization.hpp
src/widgets/: CMakeLists.txt  body_component.cpp  body_component.hpp  combat_log.cpp  combat_log.hpp  combatant.cpp  combatant.hpp  console_overlay.cpp  console_overlay.hpp  fancy_log.cpp  fancy_log.hpp  footer_component.cpp  footer_component.hpp  root_component.cpp  root_component.hpp  widget_types.hpp
tests/: CMakeLists.txt  test_eventqueue.cpp  test_grand_central.cpp  test_initial_entities.cpp  test_is_account.cpp  test_simple_expression.cpp  test_skill_thump.cpp  test_systems.cpp  test_timed_combat.cpp  test_track_xp.cpp
tests/fairlanes/concepts/: test_damage.cpp
tests/fairlanes/context/: test_app_ctx.cpp
tests/fairlanes/ecs/components/: test_is_party.cpp  test_selected_party.cpp  test_track_xp.cpp
tests/fairlanes/fsm/: test_combatant_fsm.cpp  test_party_loop.cpp
tests/fairlanes/systems/: test_grant_xp_to_party.cpp
